2005-08-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gdk/x11/gdkim-x11.c (_gdk_x11_initialize_locale): Comment out X
	locale initialization.  We know it would fail anyway.

2005-08-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtklabel.c (gtk_label_ensure_layout_full): New function,
	extended to take additional parameter for optionally clamping the
	layout width to current allocation width.
	(gtk_label_ensure_layout_full, gtk_label_size_request): Set label
	layout's maximum width correctly when wrapping is enabled.
	(get_layout_location): Use the layout's actual width and height when
	calculating the label alignmentation.
	N#17117

2005-08-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkfilesystem.h (GtkFileSystemError): Add
	GTK_FILE_SYSTEM_ERROR_TIMEOUT to be able to differentiate (non-local)
	timeouts from generic errors.

2005-08-25  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkrc.c (gtk_rc_reparse_all_for_settings): When determining
	whether gtkrc files have been modified check whether timestamps
	differ, otherwise turning back time will make theme switching go
	unnoticed.
	N#17568

2005-08-25  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkmenu.c (gtk_menu_window_visibility_notify_event): Changed
	logic in when menu is closed when another window comes on top of it,
	and added explanation comment about it.
	N#16593

2005-08-23  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_row_inserted): don't
	bother inserting new rows in a level with a zero refcount and
	immediately free the level. (Fixes #312350, reported by Markku Vire).
	N#17314

2005-08-22  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkviewport.c ("shadow-type" property): Change default to
	GTK_SHADOW_NONE to not draw extra borders.  N#17723

2005-08-22  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkentry.c (gtk_entry_set_visibility): Disable